@@ -5,6 +5,8 @@ lintian (2.5.46) UNRELEASED; urgency=medium
   * checks/debhelper.{desc,pm}:
     + [JW] Apply patch from Chris Lamb to check for common typos in
       debian/rules target names.  (Closes: #832096)
+    + [JW, NT] Add some more (indirect) "dh" build-systems.
+      (Closes: #828773)
   * checks/scripts.pm:
     + [JW] Fix false positive unusual-interpreter when the script had
       "#!/usr/bin/env" shebang and the interpreter was shipped in the same
